// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should render on bottom and match the snapshot 1`] = `
.c2 {
  width: auto;
  height: auto;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  justify-items: flex-end;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  position: absolute;
  z-index: 999;
  right: 0;
  bottom: 35px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
}

.c8 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #9AA1B6;
  color: rgba(0,0,237,1);
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
}

.c9::after {
  display: block;
  content: attr(title);
  font-weight: bold;
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

.c6:hover .c7 {
  font-weight: bold;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      class="c1"
    >
      <img
        alt="dots"
        class="c2"
        src="IMAGE_MOCK"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <img
            alt="icon"
            src="img.png"
          />
          <p
            class="c7 c8 c9"
            color="red"
            title="Label"
          >
            Label
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should render on top and  match the snapshot 1`] = `
.c2 {
  width: auto;
  height: auto;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  justify-items: flex-end;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      class="c1"
    >
      <img
        alt="dots"
        class="c2"
        src="IMAGE_MOCK"
      />
    </div>
  </div>
</div>
`;
